# headless-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  Driver.cpp  NoStartup.cpp  README.md  Setup.cmake  UnionDriver.cpp  UserShared.hpp  VolumeInfoDumper.hpp
hc-rt/: .gitattributes  CMakeLists.txt  README.md
hc-rt/include/: CMakeLists.txt  __config.inc.in
hc-rt/include/BinaryFormat/: COFF.hpp  Consumer.hpp
hc-rt/include/Bootstrap/: KUserSharedData.hpp  LargeInteger.hpp  ModuleParser.hpp  StringMerger.hpp  StubParser.hpp  Syscalls.hpp  Syscalls.mac  UnicodeString.hpp  Win64KernelDefs.hpp  WinapiDefs.hpp
hc-rt/include/Common/: Align.hpp  Array.hpp  AtomicLazy.hpp  Casting.hpp  Checked.hpp  DefaultFuncPtr.hpp  DynAlloc.hpp  EnumArray.hpp  EnumBitwise.hpp  FastMath.hpp  Features.hpp  Flags.hpp  Function.hpp  Fundamental.hpp  Handle.hpp  Lifetime.hpp  Limits.hpp  Location.hpp  MMatch.hpp  ManualDrop.hpp  Memory.hpp  Option.hpp  PadStruct.hpp  Pair.hpp  Predefs.hpp  PtrRange.hpp  PtrUnion.hpp  RawLazy.hpp  Result.hpp  StrRef.hpp  Strings.hpp  TaggedEnum.hpp  TaggedUnion.hpp  Traits.hpp  Tuple.hpp  Unwrap.hpp  _DynAlloc.hpp  _HandleAttr.hpp  _ResultBase.hpp
hc-rt/include/Format/: VaList.hpp
hc-rt/include/Meta/: ASM.hpp  ExTraits.hpp  ID.hpp  Intrusive.hpp  Objects.hpp  Once.hpp  Preproc.hpp  Refl.hpp  StatefulRegistry.hpp  Traits.hpp  Unwrap.hpp  _FnTraits.hpp  _PackTraits.hpp  _QualTraits.hpp
hc-rt/include/Parcel/: BitList.hpp  BitSet.hpp  Common.hpp  Skiplist.hpp  StaticVec.hpp  StringTable.hpp  StringTable2.hpp  _BitRef.hpp
hc-rt/include/Std/: cstdarg  cstddef  cstdio  memory  new  typeinfo  utility
hc-rt/include/Std/__algorithm/: comp.hpp  comp_ref.hpp  max.hpp  min.hpp
hc-rt/include/Std/__tuple/: tuple_element.hpp  tuple_size.hpp
hc-rt/include/Std/__type_traits/: conditional.hpp  desugars_to.hpp  enable_if.hpp  integral_constant.hpp
hc-rt/include/Std/__utility/: swap.hpp
hc-rt/include/Sys/: Args.hpp  Atomic.hpp  AtomicMutex.hpp  BasicNetwork.hpp  Errors.hpp  File.hpp  IOFile.hpp  IOFileBuf.hpp  Locks.hpp  Mutex.hpp  OSMutex.hpp  Shutdown.hpp  _EmptyMutex.hpp  _File.hpp
hc-rt/src/: CMakeLists.txt  xcrtDefs.hpp
hc-rt/src/BinaryFormat/: MagicMatcher.cpp
hc-rt/src/Bootstrap/: COFFModule.cpp  CheckPacking.cpp  ModuleParser.cpp  StringMerger.cpp  StubParser.cpp  Syscalls.cpp  UnicodeString.cpp  Win64KernelDefs.cpp  _NtModule.hpp
hc-rt/src/Common/: CheckFundamental.cpp  IAlign.hpp  Immintrin.hpp  InlineIntrin.hpp  InlineMemcmp.hpp  InlineMemcpy.hpp  InlineMemset.hpp  MemUtils.hpp  Memory.cpp  Prefetching.hpp  SSEVec.hpp  StrRef.cpp
hc-rt/src/Meta/: ID.cpp
hc-rt/src/Parcel/: StringTable.cpp  _StrTblSortFast.hpp  _StrTblSortSlow.hpp
hc-rt/src/Sys/: Generic.hpp  IOFile.cpp  IOFile.hpp  IOFileBuf.hpp  Mutex.cpp  NtCodes.html  OpaqueError.hpp
hc-rt/src/Sys/Core/: Generic.hpp
hc-rt/src/Sys/Core/Nt/: CheckPacking.cpp  Filesystem.hpp  Generic.hpp  Handles.hpp  Info.hpp  Mutant.hpp  Structs.hpp
hc-rt/src/Sys/Sync/: MutexHandle.hpp
hc-rt/src/Sys/Sync/Win/: Mutant.hpp
hc-rt/src/Sys/Win/: Args.cpp  Console.hpp  Except.hpp  Filesystem.hpp  IOFile.cpp  IOFile.hpp  Mutant.hpp  Mutex.cpp  OSMutex.cpp  Object.hpp  OpaqueError.cpp  PFiles.cpp  PathNormalizer.cpp  PathNormalizer.hpp  PathNormalizer0.cpp  PathNormalizer0.hpp  PathNormalizer2.cpp  PathPredictor.cpp  PlatformStatus.cpp  Process.hpp  Shutdown.cpp  Volume.hpp  Wait.hpp  _PathUtils.hpp
hc-rt/src/Sys/Win/Nt/: CheckPacking.cpp  Except.cpp  Except.hpp  Filesystem.hpp  Generic.hpp  Handles.hpp  IOControl.hpp  Info.hpp  Mutant.hpp  Object.hpp  Process.hpp  Process.mac  Structs.hpp  Utils.hpp  Volume.hpp
hc-rt/startup/: GccMain.cpp  Main2.cpp  RtBegin.cpp  RtEnd.cpp
hc-rt/xcrt/: BuiltinOverrides.cpp  CMakeLists.txt  GlobalXtors.hpp  Locks.hpp  README.md  Stub.cpp
hc-rt/xcrt/Generic/String/: Memcmp.cpp  Memset.cpp  Utils.hpp  XStrcpy.cpp  XStrlen.cpp  XStrncmp.cpp  XStrnlen.cpp  XStrstr.cpp
hc-rt/xcrt/Mingw/: Emutils.cpp  InitCookie.cpp  NtdllLdr.cpp  NtdllLdr.hpp  Startup.cpp  Startup.hpp  TryPrint.hpp  Xtors.cpp  emutils.c
hc-rt/xcrt/Phase0/: Chkstk.cpp  InitCookie.cpp  Startup.cpp  Xtors.cpp
hc-rt/xcrt/Phase1/: ArgParser.cpp  ArgParser.hpp  Emutils.cpp  Emutls.cpp  Initialization.cpp  Initialization.hpp  Locks.cpp  StdIO.cpp  TLS.cpp
hc-rt/xcrt/Shutdown/: Atexit.cpp  Exit.cpp
hc-rt/xcrt/String/: Memcmp.cpp  Memcpy.cpp  Memset.cpp  Utils.hpp  XStrcmp.cpp  XStrcpy.cpp  XStrlen.cpp
hc-rt/xcrt/Win/: CMakeLists.txt
hc-rt/xcrt/Win/Memory/: Box.cpp  Box.hpp
hc-rt/xcrt/Win/Phase0/: InitCookie.cpp  Startup.cpp  Xtors.cpp
hc-rt/xcrt/Win/Phase1/: ArgParser.cpp  ArgParser.hpp  ConsoleSetup.cpp  ConsoleSetup.hpp  Initialization.cpp  StdIO.cpp
hc-rt/xcrt/Win/Shutdown/: Exit.cpp
hc-rt/xcrt/_Gnu/: RtBegin.cpp  RtEnd.cpp
hc-rt/xcrt/include/: xcrt.hpp
hc-rt/xcrt/include/xcrt/: Stdlib.hpp  String.hpp
hc/include/BinaryFormat/: ELF.hpp
hc/include/Bootstrap/: ModuleParser.hpp  StubParser.hpp  Syscalls.hpp  Syscalls.mac  UnicodeString.hpp  Win64KernelDefs.hpp
hc/include/Common/: Casting.hpp  (+9 more)
hc/runtime/: GlobalXtors.hpp
include/BinaryFormat/: COFF.hpp  Consumer.hpp  MagicMatcher.hpp
include/Bootstrap/: ModuleParser.hpp  StubParser.hpp  Syscalls.hpp  Syscalls.mac  Win64KernelDefs.hpp
include/Common/: Align.hpp  Array.hpp  Casting.hpp  DynAlloc.hpp  EnumArray.hpp  Features.hpp  Fundamental.hpp  Handle.hpp  Intrusive.hpp  Lifetime.hpp  Memory.hpp  Option.hpp  Predefs.hpp  Preproc.hpp  PtrRange.hpp  PtrUnion.hpp  Refl.hpp  Result.hpp  StaticVec.hpp  StrRef.hpp  Strings.hpp  TaggedEnum.hpp  Traits.hpp  Tuple.hpp  Unwrap.hpp
include/Core/: Memory.hpp
include/Parcel/: StaticVec.hpp
scripts/: Assert.cmake  DumpProperties.cmake  ListUtils.cmake  SetFlags.cmake  SetInternalFlag.cmake  SetOptions.cmake  SetVersion.cmake  ValuedOption.cmake
src/: CMakeLists.txt
src/BinaryFormat/: MagicMatcher.cpp
src/Bootstrap/: COFFModule.cpp  ModuleParser.cpp  StubParser.cpp  Syscalls.cpp  Win64KernelDefs.cpp
src/Common/: Memory.cpp
tools/: SymDumper.cpp  SyscallDumper.cpp  TableParser.cpp
(+14 files in other folders)
